<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.saperov.weather.Two"
    tools:showIn="@layout/activity_two">

    <LinearLayout
        android:id="@+id/linearLayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/i01d" />

        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="30sp"
            android:layout_gravity="center_vertical">
        </TextView>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/tvMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
        </TextView>
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="15sp"
            android:layout_gravity="center_vertical">
        </TextView>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/tvPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
        </TextView>
        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:textSize="15sp"
            android:layout_gravity="center_vertical">
        </TextView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/tvTempmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_min"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                >
            </TextView>
            <TextView
                android:id="@+id/tvTempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_max"
                android:textSize="15sp"
                android:layout_gravity="center_vertical">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="@dimen/activity_vertical_margin"
            >
            <TextView
                android:id="@+id/tvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="15sp"
                android:layout_gravity="center_vertical"
                android:paddingRight="@dimen/activity_horizontal_margin"
                >
            </TextView>
            <TextView
                android:id="@+id/tvWindDeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_deg"
                android:textSize="15sp"
                android:layout_gravity="center_vertical">
            </TextView>
        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        >
        <TextView
            android:id="@+id/tvClouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clouds"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            android:paddingRight="@dimen/activity_horizontal_margin"
            >
        </TextView>
        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp"
            android:textSize="15sp"
            android:layout_gravity="center_vertical"
            >
        </TextView>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
